# minesweeper

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  gitlab-ci.yaml  qt6.natvis
.github/workflows/: build.yml  cmake-multi-os.yml  release.yml
cmake/: gitInfo.cmake  windeployqt.cmake
resources/: resources.qrc  resources.rc
resources/stylesheets/: tilesheet.qss
src/: CMakeLists.txt  appinfo.h.in  gameStats.cpp  gameStats.h  gameStatsDialog.cpp  gameStatsDialog.h  gameboard.cpp  gameboard.h  highScore.cpp  highScore.h  highScoreDialog.cpp  highScoreDialog.h  highScoreModel.cpp  highScoreModel.h  main.cpp  mainwindow.cpp  mainwindow.h  mineCounter.cpp  mineCounter.h  minetimer.cpp  minetimer.h  statistics.h  tile.cpp  tile.h  versionChecker.cpp  versionChecker.h
